Fix index level in z-index.scss

--- a/styles/constants/_z-index.scss
+++ b/styles/constants/_z-index.scss
@@ -2,7 +2,8 @@ $gnb-level: 300;
 $lnb-level: 200;
 $product-tab-level: 100;
 
-$search-modal-level: 500;
-$sidebar-level: 500;
-$order-form-modal-level: 500;
+$search-modal-level: 1000;
+$sidebar-level: 1000;
+$order-form-modal-level: 1000;
 $overlay-level: 400;
+$order-form-level: 300;
